test/templates/errors/nopage.tmpl
<h1>${:error:code} - No Such Page</h1>
<p> The page you attempted to view does not exist (yet).
It is possible that it will be written at some later date.
Unlike an ordinary Wiki, you currently cannot edit pages through the
web, so you cannot create this page.
</p>
